# home-lab-as-code

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  tasks.json
.github/workflows/: ci.yml
ansible/: README.md  ansible.cfg  libvirt_manage_vms.yml  libvirt_start_vms.yml  lnx_rhel8_tailscale.yml  lnx_rhel_decommission_system.yml  lnx_rhel_soe_configure_swap.yml  lnx_rhel_soe_defaults.yml  lnx_rhel_soe_enable_epel.yml  lnx_rhel_soe_subscribe_system.yml  lnx_rhel_subscribe_system.yml  lnx_rhel_tailscale.yml  start_vms.yml  stop_vms.yml  subscribe_redhat_system.yml
ansible/collections/: requirements.yml
ansible/inventory/: hosts  libvirt.yml
packer/: README.md  rhel.pkr.hcl  rhel7.pkr.hcl  rhel8.pkr.hcl  rhel9.pkr.hcl
packer/config/: cleanup.sh  ks-el10.cfg
packer/iso-files/: README.md
packer/rhel7/: rhel7.pkr.hcl
packer/rhel7/config/: cloud.cfg  ks-el7.cfg
packer/rhel8/: rhel8.pkr.hcl
packer/rhel8/config/: ks-el8.cfg
packer/rhel9/: rhel9.pkr.hcl
packer/rhel9/config/: cloud.cfg  ks-el9.cfg
rhel8/: rhel8.pkr.hcl
rhel8/kickstart/: ks-el8.cfg
rhel9/: rhel9.pkr.hcl
rhel9/config/: cloud.cfg  ks-el9.cfg
terraform/: README.md  cdrom-model.xsl  cloud_init.tmpl  cloud_init_meta_data.tmpl  cloud_init_user_data.tmpl  libvirt.tf  main.tf  output.tf  terraform.tfvars.example  variables.tf  vars.tf
terraform/templates/: ansible_cfg.tftpl  ansible_inventory.tftpl  cloud_init_user_data.tftpl
