[project]
name = "home-lab-as-code"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ansible-core>=2.18.6",
    "bandit>=1.8.3",
    "black>=25.1.0",
    "checkov>=3.1.29",
    "cryptography>=45.0.2",
    "cyclonedx-python-lib>=9.1.0",
    "molecule>=25.4.0",
    "mypy>=1.15.0",
    "packageurl-python>=0.16.0",
    "pip-audit>=2.9.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "yamllint>=1.37.1",
]
